Revert "Add a request pipeline and configuration for retries (#469)"
This reverts commit 804467c7d34f38c850e6174ee3d5d3485ddebdaa.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,7 +56,7 @@ rustls-tls = ["reqwest/rustls-tls", "graph-http/rustls-tls", "graph-oauth/rustls
 brotli = ["reqwest/brotli", "graph-http/brotli", "graph-oauth/brotli", "graph-core/brotli"]
 deflate = ["reqwest/deflate", "graph-http/deflate", "graph-oauth/deflate", "graph-core/deflate"]
 trust-dns = ["reqwest/trust-dns", "graph-http/trust-dns", "graph-oauth/trust-dns", "graph-core/trust-dns"]
-socks = ["reqwest/socks", "graph-http/socks", "graph-oauth/socks", "graph-core/socks"]
+socks = ["graph-http/socks"]
 openssl = ["graph-oauth/openssl"]
 interactive-auth = ["graph-oauth/interactive-auth"]
 test-util = ["graph-http/test-util"]
